// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="root uui-size-24 uui-status_indicator uui-color-neutral uui-fill-solid"
  >
    <div
      class="uui-status_indicator-dot"
    />
    <p
      class="uui-status_indicator-caption"
    >
      Indicator
    </p>
  </div>
</DocumentFragment>
`;

exports[`StatusIndicator should be rendered correctly with props 1`] = `
<DocumentFragment>
  <div
    class="root uui-size-12 uui-status_indicator uui-color-info uui-fill-outline"
  >
    <div
      class="uui-status_indicator-dot"
    />
    <p
      class="uui-status_indicator-caption"
    >
      Indicator
    </p>
  </div>
</DocumentFragment>
`;
